# gapped

./: .gitignore  Cargo.toml  LICENSE  README.md
bench/: experiment.sh  gen_synthetic.py  plot.py  run_bench.sh
src/: cli.rs  error.rs  main.rs  parallel.rs  progress.rs  test_util.rs
src/commands/: apply.rs  diff.rs  mod.rs  simulate.rs  snapshot.rs  verify.rs
src/format/: header.rs  mod.rs  reader.rs  writer.rs
src/fs/: hash.rs  metadata.rs  mod.rs  walk.rs
src/model/: diff.rs  entry.rs  mod.rs  path.rs  snapshot.rs
tests/: fs_compat_test.rs  helper.rs  roundtrip.sh  roundtrip_test.rs
