[package]
name = "gapped"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.3"
clap = { version = "4.5.60", features = ["derive"] }
log = "0.4.29"
nix = { version = "0.29", features = ["fs", "user"] }
rayon = "1.11.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.26.0"
walkdir = "2.5.0"
zstd = "0.13.3"
