[package]
name = "gapped"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
crossbeam-channel = "0.5"
env_logger = "0.11.10"
log = "0.4.29"
memmap2 = "0.9.10"
nix = { version = "0.29", features = ["fs", "user"] }
rayon = "1.11.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.26.0"
thiserror = "2.0.18"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zstd = "0.13.3"
